2008-06-05  Werner Koch  <wk@g10code.com>

	* mimeparser.c (mime_decrypt): Set session number and title.
	(mime_verify_opaque, mime_verify): Ditto.
	* mapihelp.cpp (mapi_get_subject): New.
	* engine.c (engine_set_session_number, engine_set_session_title) 
	(engine_set_sender_address): New.
	(struct engine_filter_s): Add fields session_number, session_title
	and sender_address.
	(engine_private_get_session_number): New. 
	(engine_private_get_session_title): New.
	(release_filter): Release them.
	(engine_new_session_number): New.
	* engine-assuan.c (send_session_info): New
	(op_assuan_decrypt, op_assuan_verify): Call it.
	(op_assuan_sign): Use the end-of-option option for the SENDER command.

2008-05-28  Werner Koch  <wk@g10code.com>

	* dialogs.h (IDC_BODY_AS_ATTACHMENT): New.
	* dialogs.rc: Add body-as-attachemnt checkbox to the otpion
	dialog.
	* olflange-dlgs.cpp (set_labels, GPGOptionsDlgProc): Add it.
	* main.c (write_options, read_options): Handle bodyAsAttachment
	registry key.
	* mimeparser.c (start_attachment): Do not set the hidden flag if
	the new option is used.
	* mapihelp.cpp (mapi_test_attach_hidden): New.
	(mapi_get_gpgol_body_attachment): Make use of that flag.

2008-05-23  Werner Koch  <wk@g10code.com>

	* mimemaker.c (struct sink_s): Add field ENC_COUNTER.
	(write_buffer_for_cb): Update that.
	(mime_encrypt): Bail out if no data has been encrypted.
	(mime_sign_encrypt): Ditto.

2008-05-07  Werner Koch  <wk@g10code.com>

	* mimeparser.c (t2body): Fix last change.

2008-05-02  Werner Koch  <wk@g10code.com>

	* mimeparser.c (t2body): Detect non-inline text parts.
	* rfc822parse.c (rfc822parse_query_parameter): Add special mode
	for an ATTR of NULL.

2008-04-16  Werner Koch  <wk@g10code.com>

	* message-events.h (class GpgolMessageEvents): Add M_GOTINSPECTOR.
	* message.cpp (message_incoming_handler): Change return type.

	* ext-commands.cpp (check_toolbar, check_menu_toolbar): New.
	(update_protocol_menu): Explicitly update the toolbar.
