@@ -1,3 +1,7 @@
+2008-06-12  Werner Koch  <wk@g10code.com>
+
+	* olflange.cpp (DllUnregisterServer): Delete CLSIDs.
+
 2008-06-05  Werner Koch  <wk@g10code.com>
 
 	* mimeparser.c (mime_decrypt): Set session number and title.
